Release R2104:
==============
- enhancement: encode/decode functions for custom string types
- fix: invalid generation of set(const char*) for repeated strings
- fix: fix indention issue for JSON

Release R2103:
==============
- enhancement: further size optimization
- enhancement: make use of c++11 syntax
- fix: array.h has buggy end()
- fix: erroneous control flow in setByName without valid bit

Release R2102:
==============
- fix: potential bus error with write_u64 on little endian
- fix: do not set valid flag when parsing ascii fails
- fix: stringtype handling may fallback to C type
- fix: multiple options handling
- fix: return type must be ssize_t if function returns <0
- fix: build fixes for examples
- enhancement: support for setting bytes with hex encoded data
- enhancement: updated syscfg example to demo setByName
- enhancement: added doxygen comments to the generated files
- enhancement: opimization for use of empty string as invalid value

Release R2101:
==============
- enhancement: support option used for messages
- fix: obsolete field handling with early decoding
- fix: yacc deprecation warning

Release R2012:
==============
- fix: usage=obsolete produces uncompilable code
- fix: resolved compile issues related to array.h

Release R2011:
==============
- enhancement: AString should be suitable for bytes type
- enhancement: array needs emplace_back
- enhancement: per default operator == and operator != generation
- enhancement: support eraseing repeated elements via setByName
- fix: astring.h compile error
- fix: AString needs push_back(char)
- fix: FString needs some fixes
- fix: array should only use memmove/memcmp for PODs
- fix: putparam should respect stringtype
- fix: setByName(f,0) does not clear valid bit
- fix: JSON output of unknown enums should be formated as integer

Release R2007:
==============
- enhancement: code optimization for ASCII output
- enhancement: better protection against corrupt data